native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_create_application(
    const char *application_utf8, const char *emulation_root_utf8,
    const char *working_directory_utf8, int32_t backend,
    int32_t disable_logging, sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_create_empty_ex(
    const char *emulation_root_utf8, int32_t backend, int32_t disable_logging,
    const sogen_dart_linux_path_mapping *path_mappings,
    size_t path_mapping_count,
    const sogen_dart_linux_path_mapping *read_only_path_mappings,
    size_t read_only_path_mapping_count,
    const sogen_dart_linux_port_mapping *port_mappings,
    size_t port_mapping_count, sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_create_application_ex(
    const char *application_utf8, const char *const *arguments_utf8,
    size_t argument_count,
    const sogen_dart_linux_environment_entry *environment,
    size_t environment_count, int32_t environment_is_set,
    const char *emulation_root_utf8, const char *working_directory_utf8,
    int32_t backend, int32_t disable_logging,
    const sogen_dart_linux_path_mapping *path_mappings,
    size_t path_mapping_count,
    const sogen_dart_linux_path_mapping *read_only_path_mappings,
    size_t read_only_path_mapping_count,
    const sogen_dart_linux_port_mapping *port_mappings,
    size_t port_mapping_count, sogen_dart_app **out_app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_start(sogen_dart_app *app, size_t instruction_count);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_set_callbacks(
    sogen_dart_app *app, const sogen_dart_linux_callbacks *callbacks);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_stop(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_save_snapshot(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_restore_snapshot(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_serialize_state(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_deserialize_state(
    sogen_dart_app *app, const uint8_t *data, size_t length);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_read_memory(
    sogen_dart_app *app, uint64_t address, uint8_t *destination, size_t length);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_write_memory(sogen_dart_app *app, uint64_t address,
                              const uint8_t *source, size_t length);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_read_register(
    sogen_dart_app *app, int32_t reg, uint64_t *value);