native/include/generated/sogen_dart_generated.h

typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef struct sogen_dart_linux_environment_entry {
  const char *name_utf8;
  const char *value_utf8;
} sogen_dart_linux_environment_entry;
typedef struct sogen_dart_linux_path_mapping {
  const char *guest_path_utf8;
  const char *host_path_utf8;
} sogen_dart_linux_path_mapping;
typedef struct sogen_dart_linux_port_mapping {
  uint16_t emulator_port;
  uint16_t host_port;
} sogen_dart_linux_port_mapping;
typedef void (*sogen_dart_text_callback)(void *user_data, const uint8_t *text_utf8, size_t text_length);
typedef void (*sogen_dart_memory_protect_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t permission);
typedef void (*sogen_dart_memory_allocate_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t permission, int32_t commit);
typedef int32_t (*sogen_dart_memory_violate_event_callback)(void *user_data, uint64_t address, uint64_t length, int32_t operation, int32_t violation_type);
typedef int32_t (*sogen_dart_linux_syscall_callback)(void *user_data, uint64_t syscall_id, const uint8_t *name_utf8, size_t name_length);
typedef void (*sogen_dart_linux_signal_callback)(void *user_data, int32_t signum, uint64_t fault_address, int32_t signal_code);
typedef void (*sogen_dart_linux_memory_release_callback)(void *user_data, uint64_t address, uint64_t length);
typedef void (*sogen_dart_linux_module_callback)(void *user_data, const sogen_dart_linux_mapped_module *module);
typedef void (*sogen_dart_linux_thread_callback)(void *user_data, const sogen_dart_linux_thread_info *thread);
typedef void (*sogen_dart_linux_thread_switch_callback)(void *user_data, uint32_t old_thread_id, uint32_t new_thread_id);
typedef struct sogen_dart_linux_callbacks {
  void *user_data;
  sogen_dart_text_callback stdout_callback;
  sogen_dart_text_callback stderr_callback;
  sogen_dart_linux_syscall_callback syscall;
  sogen_dart_memory_violate_event_callback memory_violate;
  sogen_dart_linux_signal_callback signal;
  sogen_dart_memory_allocate_event_callback memory_allocate;
  sogen_dart_memory_protect_event_callback memory_protect;
  sogen_dart_linux_memory_release_callback memory_release;
  sogen_dart_linux_module_callback module_load;
  sogen_dart_linux_thread_callback thread_create;
  sogen_dart_linux_thread_callback thread_terminated;
  sogen_dart_linux_thread_switch_callback thread_switch;
} sogen_dart_linux_callbacks;