lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_linux_create_applicationPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_linux_create_application');
  late final _sogen_dart_linux_create_application =
      _sogen_dart_linux_create_applicationPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_linux_create_empty_ex(
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    int backend,
    int disable_logging,
    ffi.Pointer<sogen_dart_linux_path_mapping> path_mappings,
    int path_mapping_count,
    ffi.Pointer<sogen_dart_linux_path_mapping> read_only_path_mappings,
    int read_only_path_mapping_count,
    ffi.Pointer<sogen_dart_linux_port_mapping> port_mappings,
    int port_mapping_count,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_linux_create_empty_ex(
      emulation_root_utf8,
      backend,
      disable_logging,
      path_mappings,
      path_mapping_count,
      read_only_path_mappings,
      read_only_path_mapping_count,
      port_mappings,
      port_mapping_count,
      out_app,
    );
  }

  late final _sogen_dart_linux_create_empty_exPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<sogen_dart_linux_path_mapping>,
            ffi.Size,
            ffi.Pointer<sogen_dart_linux_path_mapping>,
            ffi.Size,
            ffi.Pointer<sogen_dart_linux_port_mapping>,
            ffi.Size,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_linux_create_empty_ex');
  late final _sogen_dart_linux_create_empty_ex =
      _sogen_dart_linux_create_empty_exPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<sogen_dart_linux_path_mapping>,
              int,
              ffi.Pointer<sogen_dart_linux_path_mapping>,
              int,
              ffi.Pointer<sogen_dart_linux_port_mapping>,
              int,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_linux_create_application_ex(
    ffi.Pointer<ffi.Char> application_utf8,
    ffi.Pointer<ffi.Pointer<ffi.Char>> arguments_utf8,
    int argument_count,
    ffi.Pointer<sogen_dart_linux_environment_entry> environment,
    int environment_count,
    int environment_is_set,
    ffi.Pointer<ffi.Char> emulation_root_utf8,
    ffi.Pointer<ffi.Char> working_directory_utf8,
    int backend,
    int disable_logging,
    ffi.Pointer<sogen_dart_linux_path_mapping> path_mappings,
    int path_mapping_count,
    ffi.Pointer<sogen_dart_linux_path_mapping> read_only_path_mappings,
    int read_only_path_mapping_count,
    ffi.Pointer<sogen_dart_linux_port_mapping> port_mappings,
    int port_mapping_count,
    ffi.Pointer<ffi.Pointer<sogen_dart_app>> out_app,
  ) {
    return _sogen_dart_linux_create_application_ex(
      application_utf8,
      arguments_utf8,
      argument_count,
      environment,
      environment_count,
      environment_is_set,
      emulation_root_utf8,
      working_directory_utf8,
      backend,
      disable_logging,
      path_mappings,
      path_mapping_count,
      read_only_path_mappings,
      read_only_path_mapping_count,
      port_mappings,
      port_mapping_count,
      out_app,
    );
  }

  late final _sogen_dart_linux_create_application_exPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Size,
            ffi.Pointer<sogen_dart_linux_environment_entry>,
            ffi.Size,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<sogen_dart_linux_path_mapping>,
            ffi.Size,
            ffi.Pointer<sogen_dart_linux_path_mapping>,
            ffi.Size,
            ffi.Pointer<sogen_dart_linux_port_mapping>,
            ffi.Size,
            ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
          )
        >
      >('sogen_dart_linux_create_application_ex');
  late final _sogen_dart_linux_create_application_ex =
      _sogen_dart_linux_create_application_exPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              ffi.Pointer<sogen_dart_linux_environment_entry>,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<sogen_dart_linux_path_mapping>,
              int,
              ffi.Pointer<sogen_dart_linux_path_mapping>,
              int,
              ffi.Pointer<sogen_dart_linux_port_mapping>,
              int,
              ffi.Pointer<ffi.Pointer<sogen_dart_app>>,
            )
          >();

  int sogen_dart_linux_start(
    ffi.Pointer<sogen_dart_app> app,
    int instruction_count,
  ) {
    return _sogen_dart_linux_start(app, instruction_count);
  }

  late final _sogen_dart_linux_startPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>, ffi.Size)
        >
      >('sogen_dart_linux_start');
  late final _sogen_dart_linux_start = _sogen_dart_linux_startPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_linux_set_callbacks(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_linux_callbacks> callbacks,
  ) {
    return _sogen_dart_linux_set_callbacks(app, callbacks);
  }

  late final _sogen_dart_linux_set_callbacksPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_linux_callbacks>,
          )
        >
      >('sogen_dart_linux_set_callbacks');
  late final _sogen_dart_linux_set_callbacks =
      _sogen_dart_linux_set_callbacksPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_linux_callbacks>,
            )
          >();

  int sogen_dart_linux_stop(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_linux_stop(app);
  }

  late final _sogen_dart_linux_stopPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_linux_stop');
  late final _sogen_dart_linux_stop = _sogen_dart_linux_stopPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_linux_save_snapshot(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_linux_save_snapshot(app);
  }

  late final _sogen_dart_linux_save_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_linux_save_snapshot');
  late final _sogen_dart_linux_save_snapshot =
      _sogen_dart_linux_save_snapshotPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_linux_restore_snapshot(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_linux_restore_snapshot(app);
  }

  late final _sogen_dart_linux_restore_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_linux_restore_snapshot');
  late final _sogen_dart_linux_restore_snapshot =
      _sogen_dart_linux_restore_snapshotPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_linux_serialize_state(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_linux_serialize_state(app, out_buffer);
  }

  late final _sogen_dart_linux_serialize_statePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_linux_serialize_state');
  late final _sogen_dart_linux_serialize_state =
      _sogen_dart_linux_serialize_statePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_linux_deserialize_state(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint8> data,
    int length,
  ) {
    return _sogen_dart_linux_deserialize_state(app, data, length);
  }

  late final _sogen_dart_linux_deserialize_statePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_linux_deserialize_state');
  late final _sogen_dart_linux_deserialize_state =
      _sogen_dart_linux_deserialize_statePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int sogen_dart_linux_read_memory(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Uint8> destination,
    int length,
  ) {
    return _sogen_dart_linux_read_memory(app, address, destination, length);
  }

  late final _sogen_dart_linux_read_memoryPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_linux_read_memory');
  late final _sogen_dart_linux_read_memory = _sogen_dart_linux_read_memoryPtr
      .asFunction<
        int Function(
          ffi.Pointer<sogen_dart_app>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  int sogen_dart_linux_write_memory(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Uint8> source,
    int length,
  ) {
    return _sogen_dart_linux_write_memory(app, address, source, length);
  }

  late final _sogen_dart_linux_write_memoryPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_linux_write_memory');
  late final _sogen_dart_linux_write_memory = _sogen_dart_linux_write_memoryPtr
      .asFunction<
        int Function(
          ffi.Pointer<sogen_dart_app>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  int sogen_dart_linux_read_register(
    ffi.Pointer<sogen_dart_app> app,
    int reg,
    ffi.Pointer<ffi.Uint64> value,
  ) {
    return _sogen_dart_linux_read_register(app, reg, value);
  }
